<resources>
    <string name="app_name">DataCog</string>
    <string name="b_start">Start</string>
    <string name="digit_test">This is the new activity.</string>
    <string name="b_back">Back</string>
    <string name="stroop_letters">Tap the button corresponding to the color of the letters (Not the spelled word).</string>
    <string name="stroop_word">Tap the matching button of the spelled word.</string>
    <string name="stroop_end">Exercise completed, tap the button below to continue.</string>
    <string name="understood">Understood</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="enter_numbers">Enter the numbers in the order they appeared.</string>
    <string name="incomin_numbers"> numbers will appear. \n Remember them.</string>
    <string name="start_button_text">Tap to start</string>
    <string name="best_text1">Best</string>
    <string name="best_text2">Best time will  be shown here</string>
    <string name="worst_text1">Worst</string>
    <string name="worst_text2">Worst time will be shown here</string>
    <string name="average_text1">Average</string>
    <string name="average_text2">Average time will be shown here</string>
    <string name="reponse_time_intro">This is a reaction time test.\n Tap the screen each time it turns blue as fast as possible.</string>
    <string name="Reaction">Reaction time</string>
    <string name="Stroop">Stroop</string>
    <string name="digit_intro">Digit span test \n Instructions will appear when the test begins.</string>

</resources>
