<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.student.sjh.datacog.Stroop"
    android:id="@+id/stroop">

    <TextView
        android:id="@+id/stroopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:text="@string/stroop_letters"
        android:textColor="@color/colorTextSecondary"
        android:textStyle="bold"
        android:textSize="25sp"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        />

    <Button
        android:id="@+id/stroopUnderstood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/understood"
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/ButtonStart"
        android:onClick="startStroop"

        android:layout_marginTop="26dp"
        android:layout_below="@+id/stroopText"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/buttonsGrid"
        android:layout_below="@+id/stroopText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:visibility="gone"
        >
        <Button
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_column="0"
            app:layout_row="0"
            android:id="@+id/purpleButton"
            android:text="@string/purple"
            android:textStyle="bold"
            android:textColor="@color/colorPurple"
            android:onClick="colorButtonPres"
            />
        <Button
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_row="0"
            android:id="@+id/blueButton"
            android:text="@string/blue"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:onClick="colorButtonPres"

            />
        <Button
            app:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_row="1"
            android:id="@+id/orangeButton"
            android:text="@string/orange"
            android:textStyle="bold"
            android:textColor="@color/colorOrange"
            android:onClick="colorButtonPres"
            />
        <Button
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_row="1"
            android:id="@+id/greenButton"
            android:text="@string/green"
            android:textStyle="bold"
            android:textColor="@color/colorGreen"
            android:onClick="colorButtonPres"

            />
        <Button
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_row="2"
            android:id="@+id/redButton"
            android:text="@string/red"
            android:textStyle="bold"
            android:textColor="@color/colorRed"
            android:onClick="colorButtonPres"

            />
        <Button
            app:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_row="2"
            android:id="@+id/yellowButton"
            android:text="@string/yellow"
            android:textStyle="bold"
            android:textColor="@color/colorYellow"
            android:onClick="colorButtonPres"
            android:shadowColor="@color/colorShadow"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            />

    </android.support.v7.widget.GridLayout>

</RelativeLayout>
